fix z-index scrollbar issue

--- a/easy-ui-react/src/CodeBlock/CopyButton.module.scss
+++ b/easy-ui-react/src/CodeBlock/CopyButton.module.scss
@@ -5,4 +5,5 @@
   @include unstyled.button;
   display: inline-flex;
   cursor: pointer;
+  position: relative;
 }
